--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,9 +7,9 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_diagram">Diagram</string>
+    <string name="menu_home">Сканирование</string>
+    <string name="menu_gallery">История</string>
+    <string name="menu_diagram">Отчет</string>
 
     <string-array name="categories">
         <item>ПРОДУКТЫ</item>
